--- a/Contilog.csproj
+++ b/Contilog.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Blazored.TextEditor" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="9.0.6" />
   </ItemGroup>
 
