--- a/Contilog.csproj
+++ b/Contilog.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Blazored.TextEditor" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="9.0.6" />
+    <PackageReference Include="PdfSharp.MigraDoc.Standard" Version="1.51.15" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
